# talent-plan

courses/rust/building-blocks/bb-1/: Cargo.toml  move.json
courses/rust/building-blocks/bb-2/: Cargo.toml  move.bson
courses/rust/production/project-1/: Cargo.toml
courses/rust/production/project-1/src/: lib.rs
courses/rust/production/project-2/: Cargo.toml
courses/rust/production/project-2/src/: error.rs  kv.rs
