[package]
name = "kvs-2"
version = "0.1.0"
authors = ["Smit Patel smitp.contact@gmail.com"]
description = "A key value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
ron = "0.8.1"
bson = "2.13.0"
