[package]
name = "kvs"
version = "0.1.0"
authors = ["Smit Patel smitp.contact@gmail.com"]
description = "A key value store"
edition = "2021"
default-run = "kvs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
failure = "0.1.8"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
